--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,10 @@
 @tailwind utilities;
 @layer base {
   body {
-    @apply font-body;
+    @apply font-body text-base font-normal;
+    line-height: 1.5
+  }
+  input {
+    @apply outline-none;
   }
 }
